# invoice-backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  frontend-upload.js  main.py  pyproject.toml  start.sh
invoice_generator/: asgi.py  settings.py  urls.py  wsgi.py
ivg/: admin.py  apps.py  constant.py  models.py  permissions.py  serializers.py  urls.py  views.py
ivg/migrations/: 0001_initial.py  0002_invoicedata.py  0002_remove_invoiceuser_is_system_invoiceuser_is_admin_and_more.py  0003_vendors_invoicedata_file_url.py  0004_remove_invoicedata_file_url.py
src/: routers.py  schema.py  services.py
src/utils/: database.py
templates/: invoice.html
