[project]
name = "invoice-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastapi-users>=15.0.3",
    "fastapi-users-db-sqlalchemy>=7.0.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "qrcode[pil]>=8.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "weasyprint>=67.0",
]
